tests/pos/firstproj/src/main/scala/Main.scala
@main def hello(): Unit =
  println("Hello from sb!")
